--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,8 @@
         <project.release.level>11</project.release.level>
         <project.source.level>11</project.source.level>
         <project.target.level>11</project.target.level>
+        <sonar.organization>hamza117</sonar.organization>
+        <sonar.host.url>https://sonarcloud.io</sonar.host.url>
     </properties>
 
     <dependencies>
